# ChessEngine

./: .gitignore  Cargo.toml  README.md  TUNING_RESULTS.md  analyze_blunders.py  chess_engine_vs_stockfish.pgn  play_vs_stockfish.py  test_bdg_blunder.py  test_depth.py  test_movetime.py  trained_new_combined.nnue
.cargo/: config.toml
benches/: engine_benchmarks.rs
scripts/: README.md  analyze_game.py  batch_vs_stockfish.py  blunder_scan.py  check_mate_status.py  head_to_head.py  nodes_sweep.py  play_stockfish.py  play_vs_stockfish.py  selfplay_param_sweep.py  tactics_batch.py  tune.py  uci_match.py  wac_eval.py
src/: advanced_search.rs  aspiration.rs  attack_tables.rs  bench.rs  bitboard.rs  bitboard_utils.rs  bitboards.rs  board.rs  engine.rs  eval.rs  evaluation.rs  feature_export.rs  lib.rs  lmr.rs  magic.rs  main.rs  move_ordering.rs  ordering.rs  pawn_hash.rs  perft.rs  pst.rs  search.rs  search_control.rs  search_optimizations.rs  see.rs  selfplay.rs  singular.rs  sync.rs  tactics.rs  timer.rs  transposition_table.rs  tt.rs  tuned_configs.rs  tuned_eval_params.rs  tuning.rs  types.rs  uci.rs  uci_info.rs  utils.rs  zobrist.rs
src/bin_backup/: analyze_performance.rs  benchmark_search.rs  chess_engine.rs  chess_test.rs  debug_ep.rs  mate_test.rs  performance_test.rs  perft.rs  simple_performance_fix.rs  solve_pgn.rs  test_advanced_search.rs  test_magic.rs  test_special_moves.rs
src/board/: attack_tables.rs  builder.rs  debug.rs  error.rs  eval.rs  eval_baseline.rs  (+14 more)
tests/: board_tests.rs  engine_tests.rs  mate_in_one.rs  search_tests.rs  uci_integration.rs
(+123 files in other folders)
