[package]
name = "chess_engine"
version = "0.1.0"
edition = "2021"

[features]
default = []
serde = ["dep:serde"]
logging = ["dep:log"]

[dependencies]
rand = "0.8"
once_cell = "1.17"
serde = { version = "1.0", features = ["derive"], optional = true }
log = { version = "0.4", optional = true }

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"

[[bench]]
name = "engine_benchmarks"
harness = false
